--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,12 +1,14 @@
 version: "3.8"
+
 services:
   product-service:
-    image: chamithsandeepa2001/productservice:latest # replace with your Docker Hub username
+    build: .  # This tells Docker Compose to build the image locally using the Dockerfile
+    image: productservice:latest  # Matches the tag you used in Jenkinsfile
     container_name: product-service
     env_file:
-      - .env # pass your PORT and MONGO_URL
+      - .env  # Pass your PORT and MONGO_URL
     ports:
-      - "5001:5001" # maps host port 5001 to container port 5001
+      - "5001:5001"  # Maps host port 5001 to container port 5001
     restart: unless-stopped
     networks:
       - app
