--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,13 +2,12 @@ version: "3.8"
 
 services:
   product-service:
-    build: .  # This tells Docker Compose to build the image locally using the Dockerfile
-    image: productservice:latest  # Matches the tag you used in Jenkinsfile
+    image: productservice:latest # Same as Jenkins build tag
     container_name: product-service
     env_file:
-      - .env  # Pass your PORT and MONGO_URL
+      - .env
     ports:
-      - "5001:5001"  # Maps host port 5001 to container port 5001
+      - "5001:5001"
     restart: unless-stopped
     networks:
       - app
